add style fixes

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/8-css-variables/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/8-css-variables/index.html
@@ -17,7 +17,7 @@
                         <use href="src/image/sprite.svg#logo-arch"></use>
                     </svg>
                 </a>
-                <ul class="nav__links" data-nav>
+                <ul class="nav__links lists" data-nav>
                     <li class="nav__link">
                         <a class="link nav__item" href="#">Design Gallery</a>
                     </li>
@@ -32,7 +32,7 @@
                     </li>
                 </ul>
                 <div class="header__burger--toggle" data-toggle>
-                    <svg class="header__burger" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="header__burger" xmlns="http://www.w3.org/2000/svg" data-svg>
                         <use class="header__burger-color" href="src/image/sprite.svg#burger" data-burger></use>
                     </svg>
                 </div>
@@ -50,7 +50,7 @@
         </header>
         <main class="main">
             <section class="main__consultation">
-                <h1 class="title">Build Your Dream
+                <h1 class="consultation__title title">Build Your Dream
                     <span class="red-text">House</span>
                 </h1>
                 <div class="consultation__block">
@@ -59,58 +59,64 @@
                         <button class="button consultation__button" type="button">Free Consultation</button>
                     </div>
                     <div class="cosultation__image-block">
-                        <img class="cosultation__image" 
+                        <img class="cosultation__image image" 
                             src="src/image/consultation.png"
-                            srcset="src/image/cosultation-retina.png 2x">
+                            srcset="src/image/consultation-retina.png 2x"
+                            alt="first.png">
                     </div>
                 </div>
             </section>
             <section class="main__build">
                 <div class="build__title">
-                    <h2 class="subtitle">Build professional valuable room for you</h2>
+                    <h2 class="build__subtitle subtitle">Build professional valuable room for you</h2>
                 </div>
-                <ul class="build__gallery">
+                <ul class="build__gallery lists">
                     <li class="gallery__image-block">
                         <img class="gallery__image"
                             src="src/image/img-01.png"
-                            srcset="src/image/img-01-retina.png 2x">
+                            srcset="src/image/img-01-retina.png 2x"
+                            alt="second.png">
                     </li>
                     <li class="gallery__image-block">
                         <img class="gallery__image"
                             src="src/image/img-02.png"
-                            srcset="src/image/img-02-retina.png 2x">
+                            srcset="src/image/img-02-retina.png 2x"
+                            alt="third.png">
                     </li>
                     <li class="gallery__image-block">
                         <img class="gallery__image"
                             src="src/image/img-03.png"
-                            srcset="src/image/img-03-retina.png 2x">
+                            srcset="src/image/img-03-retina.png 2x"
+                            alt="fourth.png">
                     </li>
                     <li class="gallery__image-block">
                         <img class="gallery__image"
                             src="src/image/img-04.png"
-                            srcset="src/image/img-04-retina.png 2x">
+                            srcset="src/image/img-04-retina.png 2x"
+                            alt="fifth.png">
                     </li>
                 </ul>
             </section>
             <section class="main__advantages">
-                <div class="advantages__tiltle">
-                    <h2 class="subtitile">Build your needs with Archmove</h2>
+                <div class="advantages__title">
+                    <h2 class="advantages__subtitle subtitle">Build your needs with Archmove</h2>
                 </div>
                 <div class="advantages__block">
                     <div class="advantages__image-block">
-                        <img class="advantages__image"
+                        <img class="advantages__image image"
                             src="src/image/company.png"
-                            srcset="src/image/company-retina.png 2x">
+                            srcset="src/image/company-retina.png 2x"
+                            alt="sixth.png">
                     </div>
                     <div class="block__right">
-                        <ul class="advantages__list">
+                        <ul class="advantages__list lists">
                             <li class="advantage">
                                 <svg class="advantage__image" xmlns="http://www.w3.org/2000/svg">
                                     <use class="svg-color" href="src/image/sprite.svg#shield"></use>
                                 </svg>
                                 <div class="advantage__text">
-                                    <h4>100% guaranteed project completion</h4>
-                                    <p>Build safe, comfortable and transparent with a project management application with a joint account.</p>
+                                    <h4 class="text-title">100% guaranteed project completion</h4>
+                                    <p class="text">Build safe, comfortable and transparent with a project management application with a joint account.</p>
                                 </div>
                             </li>
                             <li class="advantage">
@@ -118,8 +124,8 @@
                                     <use class="svg-color" href="src/image/sprite.svg#rectangle"></use>
                                 </svg>
                                 <div class="advantage__text">
-                                    <h4>Build safe, comfortable and transparent with a project management application with a joint account.</h4>
-                                    <p>There are no hidden costs. The value of the offer you get is the value you paid.</p>
+                                    <h4 class="text-title">Build safe, comfortable and transparent with a project management application with a joint account.</h4>
+                                    <p class="text">There are no hidden costs. The value of the offer you get is the value you paid.</p>
                                 </div>
                             </li>
                             <li class="advantage">
@@ -127,8 +133,8 @@
                                     <use class="svg-color" href="src/image/sprite.svg#house"></use>
                                 </svg>
                                 <div class="advantage__text">
-                                    <h4>Get escort from the Team</h4>
-                                    <p>Monitor reports from the Arsitag team who check directly in the field.</p>
+                                    <h4 class="text-title">Get escort from the Team</h4>
+                                    <p class="text">Monitor reports from the Arsitag team who check directly in the field.</p>
                                 </div>
                             </li>
                         </ul>
@@ -139,13 +145,14 @@
             <section class="gradient">
                 <section class="main_realize">
                     <div class="realize__image-block">
-                        <img class="realize__image"
+                        <img class="realize__image image"
                             src="src/image/house.png"
-                            srcset="src/image/house-retina.png 2x">
+                            srcset="src/image/house-retina.png 2x"
+                            alt="seventh.png">
                     </div>
                     <div class="realize__block">
                         <div class="realize__title">
-                            <h2 class="subtitile">Realize your dream project with
+                            <h2 class="realize__subtitile subtitile">Realize your dream project with
                                 <span class="red-text">Archmove</span>
                             </h2>
                         </div>
@@ -153,7 +160,7 @@
                     </div>
                 </section>
                 <footer class="footer">
-                    <ul class="footer__about">
+                    <ul class="footer__about lists">
                         <li class="about__item">
                             <a class="link">About Us</a>
                         </li>
