--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -26,9 +26,11 @@
                 </div>
             </div>
             <div class="header__control">
-                <svg class="moon">
-                    <use xlink:href="#moon"></use>
-                </svg>
+                <button class="header__skin-btn" type="button" data-attr-change-skin>
+                    <svg class="icon">
+                        <use xlink:href="#moon" data-attr-icon></use>
+                    </svg>
+                </button>
                 <div class="header__control_sign-in">
                     <a href="#" class="header__control_sign-in">Sign in</a>
                 </div>
@@ -165,20 +167,20 @@
             </symbol>
             <symbol id="fees" viewBox="0 0 39 48">
                 <g>
-                    <path d="M2 2H37V46H2V2Z" stroke="var(--color-black)" stroke-width="4"></path>
-                    <path d="M23.2542 38V36.7661C26.3077 36.5017 28 34.9153 28 32.3301C28 30.1267 26.7676 28.7656 24.3487 28.2661L23.2542 28.0507V25.0052C24.0452 25.1423 24.6246 25.818 24.6522 26.5916H27.7425C27.7149 24.2609 25.9858 22.6158 23.2542 22.3416V21H21.9298V22.3318C18.959 22.5668 17.2483 24.1532 17.2483 26.6895C17.2483 28.8341 18.4808 30.2442 20.8353 30.7926L21.9298 31.0472V34.2005C20.9457 34.0927 20.2375 33.4171 20.1915 32.5553H17C17.0092 35.0622 18.8211 36.6192 21.9298 36.7857V38H23.2542ZM24.8545 32.7316C24.8545 33.5639 24.2567 34.1221 23.2542 34.2005V31.2823C24.3303 31.4977 24.8545 31.9775 24.8545 32.7316ZM20.4766 26.3566C20.4766 25.6025 21.0744 25.0444 21.9298 24.9856V27.7667C20.9824 27.5611 20.4766 27.0714 20.4766 26.3566Z" fill="#FD665E"></path>
+                    <path d="M2 2H37V46H2V2Z" stroke="var(--color-text)" stroke-width="4"></path>
+                    <path d="M23.2542 38V36.7661C26.3077 36.5017 28 34.9153 28 32.3301C28 30.1267 26.7676 28.7656 24.3487 28.2661L23.2542 28.0507V25.0052C24.0452 25.1423 24.6246 25.818 24.6522 26.5916H27.7425C27.7149 24.2609 25.9858 22.6158 23.2542 22.3416V21H21.9298V22.3318C18.959 22.5668 17.2483 24.1532 17.2483 26.6895C17.2483 28.8341 18.4808 30.2442 20.8353 30.7926L21.9298 31.0472V34.2005C20.9457 34.0927 20.2375 33.4171 20.1915 32.5553H17C17.0092 35.0622 18.8211 36.6192 21.9298 36.7857V38H23.2542ZM24.8545 32.7316C24.8545 33.5639 24.2567 34.1221 23.2542 34.2005V31.2823C24.3303 31.4977 24.8545 31.9775 24.8545 32.7316ZM20.4766 26.3566C20.4766 25.6025 21.0744 25.0444 21.9298 24.9856V27.7667C20.9824 27.5611 20.4766 27.0714 20.4766 26.3566Z" fill="var(--color-red)"></path>
                 </g>
             </symbol>
             <symbol id="escort" viewBox="0 0 40 53">
                 <g>
-                    <path d="M2 51V17.9097L19.5324 2.62508L38 17.9397V51H2Z" stroke="var(--color-black)" stroke-width="4"></path>
-                    <circle cx="20" cy="24" r="5" stroke="#FD665E" stroke-width="4"></circle>
+                    <path d="M2 51V17.9097L19.5324 2.62508L38 17.9397V51H2Z" stroke="var(--color-text)" stroke-width="4"></path>
+                    <circle cx="20" cy="24" r="5" stroke="var(--color-red)" stroke-width="4"></circle>
                 </g>
             </symbol>
             <symbol id="guaranteed" viewBox="0 0 48 56">
                 <g>
-                    <path d="M22.6273 51.9247C10.8481 43.511 3.35716 30.3774 2.0857 15.9972L23.6239 2.35639L45.8748 15.994C44.1284 30.4277 36.3962 43.4887 24.5344 51.9614L23.6066 52.6242L22.6273 51.9247Z" stroke="var(--color-black)" stroke-width="4"></path>
-                    <path d="M17.5 24.8995L22.508 29.9075L32.4075 20.008" stroke="#FD665E" stroke-width="4"></path>
+                    <path d="M22.6273 51.9247C10.8481 43.511 3.35716 30.3774 2.0857 15.9972L23.6239 2.35639L45.8748 15.994C44.1284 30.4277 36.3962 43.4887 24.5344 51.9614L23.6066 52.6242L22.6273 51.9247Z" stroke="var(--color-text)" stroke-width="4"></path>
+                    <path d="M17.5 24.8995L22.508 29.9075L32.4075 20.008" stroke="var(--color-red)" stroke-width="4"></path>
                 </g>
             </symbol>
         </svg>
