--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -43,13 +43,13 @@
             </button>
         </header>
         <div class="dreamhouse__title-container">
-            <h1 class="dreamhouse__title-container__title">
+            <h1 class="dreamhouse__title-container__title" data-dreamhouse-title>
                 Build Your Dream <span data-word-house class="word--color day">House</span>
             </h1>
         </div>
         <div class="dreamhouse">
             <div class="dreamhouse__aside">
-                <div class="dreamhouse__aside__text">
+                <div class="dreamhouse__aside__text" data-dreamhouse-text>
                     <p>The first and most trusted marketplace</p>
                     <p>of design & build house in the World.</p>
                     <p>100% guaranted Build safe,</p>
@@ -67,8 +67,8 @@
                 </picture>
             </div>
         </div>
-        <h2 class="design__title">Build professional</h2>
-        <h2 class="design__title">valuable room for you</h2>
+        <h2 class="design__title" data-design-title>Build professional</h2>
+        <h2 class="design__title" data-design-title>valuable room for you</h2>
         <div class="design">
             <picture>
                 <source srcset="2x/kitchen_2x.png 2x">
@@ -87,8 +87,8 @@
                 <img src="1x/diningroom_1x.png" alt="diningroom">
             </picture>
         </div>
-        <h2 class="archmove__title">Build your needs</h2>
-        <h2 class="archmove__title">with Archmove</h2>
+        <h2 class="archmove__title" data-archmove-title>Build your needs</h2>
+        <h2 class="archmove__title" data-archmove-title>with Archmove</h2>
         <div class="archmove">
             <div>
                 <picture>
@@ -101,7 +101,7 @@
                     <svg width="48" height="56" class="archmove__icon--bird">
                         <use xlink:href="sprite.svg#bird"></use>
                     </svg>
-                    <div class="archmove__content__part--text">
+                    <div class="archmove__content__part--text" data-archmove-text>
                         <h4>
                             <b>100% guaranted project completion</b>
                         </h4>
@@ -114,7 +114,7 @@
                     <svg width="39" height="48" class="archmove__icon">
                         <use xlink:href="sprite.svg#dollar"></use>
                     </svg>
-                    <div class="archmove__content__part--text">
+                    <div class="archmove__content__part--text" data-archmove-text>
                         <h4>
                             <b>No additional fees</b>
                         </h4>
@@ -126,7 +126,7 @@
                     <svg width="40" height="53" class="archmove__icon">
                         <use xlink:href="sprite.svg#circle"></use>
                     </svg>
-                    <div class="archmove__content__part--text">
+                    <div class="archmove__content__part--text" data-archmove-text>
                         <h4>
                             <b>Get escort from the Team</b>
                         </h4>
@@ -139,7 +139,7 @@
                 </button>
             </div>
         </div>
-        <div class="container day">
+        <div class="container day" data-container>
             <div class="dream-project day">
                 <div class="dream-project--photo">
                     <picture>
@@ -148,7 +148,7 @@
                     </picture>
                 </div>
                 <div class="dream-project__content">
-                    <div class="dream-project__content__text">
+                    <div class="dream-project__content__text" data-dream-project-text>
                         <p>
                             <b>Realize your dream</b>
                         </p>
