--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/8-css-variables/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/8-css-variables/index.html
@@ -10,30 +10,30 @@
         <link rel="stylesheet" href="style.css">
         <title>Archmove - Architech Marketplace</title>
     </head>
-    <body>
+    <body class="body">
         <div class="container">
 
             <header class="header">
-                <div class="header__logo">
-                    <a href="#">
+                <div class="header__logo logo">
+                    <a class="a" href="#">
                         <svg class="header__logo-svg" width="62" height="28" viewBox="0 0 62 28" fill="" xmlns="http://www.w3.org/2000/svg">
                             <use href="images/sprite.svg#logo"></use>
                         </svg>
                     </a>
                 </div>
                 <nav class="header__menu">
-                    <ul>
-                        <li>
-                            <a href="#">Design Gallery</a>
+                    <ul class="menu ul">
+                        <li class="li">
+                            <a class="menu__item a" href="#">Design Gallery</a>
                         </li>
-                        <li>
-                            <a href="#">List of Architect</a>
+                        <li class="li">
+                            <a class="menu__item a" href="#">List of Architect</a>
                         </li>
-                        <li>
-                            <a href="#">Articles</a>
+                        <li class="li">
+                            <a class="menu__item a" href="#">Articles</a>
                         </li>
-                        <li>
-                            <a href="#">How it Works</a>
+                        <li class="li">
+                            <a class="menu__item a" href="#">How it Works</a>
                         </li>
                     </ul>
                 </nav>
@@ -46,145 +46,143 @@
                     </svg>
                 </button>
                 <button class="header__sign-in" type="button">Sign In</button>
-                <button class="header__sign-up" type="button">Sign Up</button>
+                <button class="header__sign-up button" type="button">Sign Up</button>
             </header>
 
             <main class="main">
-                <section class="main__dream-house dream-house">
-                    <h1 class="dream-house__title">
-                        Build Your Dream <span>House</span>
+                <section class="main__dream-house">
+                    <h1 class="dream-house__title h1">
+                        Build Your Dream <span class="dream-house__title-span">House</span>
                     </h1>
-                    <div class="dream-house-container">
-                        <div>
-                            <article class="dream-house__text">
-                                The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result
-                            </article>
-                            <button class="dream-house__button" type="button">Free Consultation</button>
-                        </div>
-                        <div class="dream-house__image">
-                            <picture>
-                                <source srcset="images/dream-house-x2.png" media="(min-resolution: 2dppx)">
-                                <img src="images/dream-house.png" alt="dream house"> 
-                            </picture>
-                        </div>
+                    <div class="dream-house__info">
+                        <article class="dream-house__text">
+                            The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result
+                        </article>
+                        <button class="dream-house__button button" type="button">Free Consultation</button>
+                    </div>
+                    <div class="dream-house__image">
+                        <picture>
+                            <source srcset="images/dream-house-x2.png" media="(min-resolution: 2dppx)">
+                            <img class="img" src="images/dream-house.png" alt="dream house"> 
+                        </picture>
                     </div>
                 </section>
                 <section class="main__professional-valuable professional-valuable">
-                    <h2 class="professional-valuable__title">Build professional valuable room for you</h2>
+                    <h2 class="professional-valuable__title h2">Build professional valuable room for you</h2>
                     <div class="professional-valuable-container">
                         <div class="professional-valuable__example">
                             <picture>
                                 <source srcset="images/example_1-x2.png" media="(min-resolution: 2dppx)">
-                                <img src="images/example_1.png" alt="">
+                                <img class="img" src="images/example_1.png" alt="">
                             </picture>
                         </div>
                         <div class="professional-valuable__example">
                             <picture>
                                 <source srcset="images/example_2-x2.png" media="(min-resolution: 2dppx)">
-                                <img src="images/example_2.png" alt="">
+                                <img class="img" src="images/example_2.png" alt="">
                             </picture>
                         </div>
                         <div class="professional-valuable__example">
                             <picture>
                                 <source srcset="images/example_3-x2.png" media="(min-resolution: 2dppx)">
-                                <img src="images/example_3.png" alt="">
+                                <img class="img" src="images/example_3.png" alt="">
                             </picture>
                         </div>
                         <div class="professional-valuable__example">
                             <picture>
                                 <source srcset="images/example_4-x2.png" media="(min-resolution: 2dppx)">
-                                <img src="images/example_4.png" alt="">
+                                <img class="img" src="images/example_4.png" alt="">
                             </picture>
                         </div>
                     </div>
                 </section>
                 <section class="main__archmove archmove">
-                    <h2 class="archmove__title">Build your needs with Archmove</h2>
+                    <h2 class="archmove__title h2">Build your needs with Archmove</h2>
                     <div class="arcmove-container">
                         <picture class="archmove__picture">
                             <source srcset="images/archmove-x2.png" media="(min-resolution: 2dppx)">
-                            <img src="images/archmove.png" alt="#">
+                            <img class="img" src="images/archmove.png" alt="#">
                         </picture>
                         <div class="archmove__advantages advantages">
 
                             <div class="advantages__one">
-                                <div>
+                                <div class="advantages-item__container">
                                     <svg class="advantages__one-svg" width="48" height="56" viewBox="0 0 48 56" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <use href="images/sprite.svg#advantage-1"></use>
                                     </svg>
                                 </div>
                                 <div>
-                                    <h3>100% guaranteed project completion</h3>
+                                    <h3 class="h3">100% guaranteed project completion</h3>
                                     <article>Build safe, comfortable and transparent with a project management application with a joint account.</article>
                                 </div>
                             </div>
 
                             <div class="advantages__two">
-                                <div>
+                                <div class="advantages-item__container">
                                     <svg class="advantages__two-svg" width="39" height="48" viewBox="0 0 39 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <use href="images/sprite.svg#advantage-2"></use>
                                     </svg>
                                 </div>
                                 <div>
-                                    <h3>No additional fees</h3>
+                                    <h3 class="h3">No additional fees</h3>
                                     <article>There are no hidden costs. The value of the offer you get is the value you paid.</article>
                                 </div>
                             </div>
 
                             <div class="advantages__three">
-                                <div>
+                                <div class="advantages-item__container">
                                     <svg class="advantages__three-svg" width="40" height="53" viewBox="0 0 40 53" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <use href="images/sprite.svg#advantage-3"></use>
                                     </svg>
                                 </div>
                                 <div>
-                                    <h3>Get escort from the Team</h3>
+                                    <h3 class="h3">Get escort from the Team</h3>
                                     <article>Monitor reports from the Arsitag team who check directly in the field.</article>
                                 </div>
                             </div>
 
-                            <button class="advantages__consultation" type="button">FREE CONSULTATION</button>
+                            <button class="advantages__consultation button" type="button">FREE CONSULTATION</button>
                         </div>
                     </div>
                 </section>
             </main>
 
             <footer class="footer">
-                <section class="footer__realize-project realize-project">
-                    <div class="realize-project-picture__container">
+                <section class="footer__realize-project">
+                    <div class="realize-project__picture-container">
                         <img class="realize-project__big-cloud" src="images/big-cloud.png" alt="#">
                         <img class="realize-project__small-cloud" src="images/small-cloud.png" alt="#">
                         <picture class="realize-project__picture">
                             <source srcset="images/realize-project-x2.png" media="(min-resolution: 2dppx)">
-                            <img src="images/realize-project.png" alt="#">
+                            <img class="img" src="images/realize-project.png" alt="#">
                         </picture>
                     </div>
                     <div class="realize-project-container">
-                        <h2 class="realize-project__title">
-                            Realize your dream project with <span>Archmove</span>
+                        <h2 class="realize-project__title h2">
+                            Realize your dream project with <span class="realize-project__title-span">Archmove</span>
                         </h2>
-                        <button class="realize-project__button" type="button">FREE CONSULTATION</button>
+                        <button class="realize-project__button button" type="button">FREE CONSULTATION</button>
                     </div>
                 </section>
                 <div class="footer__about-us">
-                    <ul>
-                        <li>
-                            <a href="#">About Us</a>
+                    <ul class="about-us__container ul">
+                        <li class="li">
+                            <a class="about-us__item a" href="#">About Us</a>
                         </li>
-                        <li>
-                            <a href="#">How it Works</a>
+                        <li class="li">
+                            <a class="about-us__item a" href="#">How it Works</a>
                         </li>
-                        <li>
-                            <a href="#">FAQ</a>
+                        <li class="li">
+                            <a class="about-us__item a" href="#">FAQ</a>
                         </li>
-                        <li>
-                            <a href="#">Contact Us</a>
+                        <li class="li">
+                            <a class="about-us__item a" href="#">Contact Us</a>
                         </li>
-                        <li>
-                            <a href="#">Privacy Policy</a>
+                        <li class="li">
+                            <a class="about-us__item a" href="#">Privacy Policy</a>
                         </li>
                     </ul>
-                    <a class="footer__logo" href="#">
+                    <a class="footer__logo a" href="#">
                         <svg class="footer__logo-svg" width="62" height="28" viewBox="0 0 62 28" fill="" xmlns="http://www.w3.org/2000/svg">
                             <use href="images/sprite.svg#logo"></use>
                         </svg>
