fix-some-mobile

--- a/homeworks/maksym.selenkov_MaksymSelenkov/8-css-variables/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/8-css-variables/index.html
@@ -44,16 +44,16 @@
                 <section class="page__rooms rooms">
                     <h2 class="rooms__heading">Build professional valuable room for you</h2>
                     <section class="rooms__gallery">
-                        <img src="img/img-01.jpg" alt="room1">
-                        <img src="img/img-02.jpg" alt="room2">
-                        <img src="img/img-03.jpg" alt="room3">
-                        <img src="img/img-04.jpg" alt="room4">
+                        <img class="rooms__image" src="img/img-01.jpg" alt="room1">
+                        <img class="rooms__image" src="img/img-02.jpg" alt="room2">
+                        <img class="rooms__image" src="img/img-03.jpg" alt="room3">
+                        <img class="rooms__image" src="img/img-04.jpg" alt="room4">
                     </section>
                 </section>
                 <section class="page__needs needs">
                     <h2 class="needs__heading">Build your needs with Archmove</h2>
                     <section class="needs__content">
-                        <img src="img/img-5.jpg" alt="people">
+                        <img class="needs__image" src="img/img-5.jpg" alt="people">
                         <section class="needs__menu">
                             <div class="needs__item item">
                                 <svg width="48" height="56" viewBox="0 0 48 56" fill="none" xmlns="http://www.w3.org/2000/svg">
